--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/mjwatson10/academy-kitties#readme",
   "dependencies": {
+    "@truffle/hdwallet-provider": "^1.2.2",
     "truffle-assertions": "^0.9.2"
-  }
+  },
+  "devDependencies": {}
 }
